integration tests wip